[tool.poetry]
name = "advent"
version = "1.0.0"
description = "Advent of Code"
authors = ["Christopher Caputo <christopher.caputo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
